--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,8 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
+  "files": {
+    "includes": ["**", "!coverage"]
+  },
   "formatter": {
     "indentStyle": "space",
     "indentWidth": 2
